--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -11,8 +11,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Linter execution
       uses: github/super-linter@v3
+    - name: Run jest test
+      run: npm install jest && npm test   
       env:
-          DEFAULT_BRANCH: nodejs_linter_job
+          DEFAULT_BRANCH: nodejs_jest_job
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
