--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "npm test sum.test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
