--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -11,11 +11,19 @@ jobs:
       uses: actions/checkout@v2
     - name: Linter execution
       uses: github/super-linter@v3
-    - name: Run jest test
-      run: npm install jest && npm test   
       env:
           DEFAULT_BRANCH: nodejs_jest_job
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           VALIDATE_JAVASCRIPT_ES: true
+ test-execution:
+  name: test-execution
+  runs-on: ubuntu-latest
+  needs: linter-execution
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Run tests
+      run: npm install jest; npm test
+      
