--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -6,9 +6,17 @@ on:
 jobs:
  linter-execution:
   runs-on: ubuntu-latest
+  strategy:
+      matrix:
+        node-version: [10.x, 12.x]
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Setting node version
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+
     - name: Linter execution
       uses: github/super-linter@v3
       env:
@@ -26,4 +34,3 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests
       run: npm install jest; npm test
-      
