--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   },
   "homepage": "https://github.com/j-maestre/GitFlow#readme",
   "keywords": [],
-  "description": ""
+  "description": "hola"
 }
