--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -2,7 +2,7 @@ name: main_workflow
 on:
   push:
     branches:
-      - nodejs_jest_job
+      - nodejs_nodeversions_job
 jobs:
  linter-execution:
   runs-on: ubuntu-latest
