--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -34,3 +34,14 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests
       run: npm install jest; npm test
+  environment_test_execution:
+  name: environment_test
+  runs-on: ubuntu-latest
+  needs: [linter-execution ,test-execution]
+  steps:
+    - name: test env
+      uses: uses: adeloyedeji/github-actions-hello@v1.0
+      env:
+        DESTINATION_PERSON: 2DAW
+      with: 
+          who-to-greet: '${{env.DESTINATION_PERSON}}'
