--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -1,32 +1,18 @@
-name: react_surge
+name: Bot telegram
 on: 
   push:
     branches:
-      - react_app_deploy_2
+      - send_telegram_action
 jobs:
-  build_estatics:
-    name: build_estatics
+  send_telegram_bot:
+    name: send_telegram_bot 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      # - name: install bot
-      #   run:  npm i node-telegram-bot-api
-
-        
-  # deploy_job:
-  #   runs-on: ubuntu-latest
-  #   needs: build_estatics
-  #   steps:
-  #     - name: artifact_download
-  #       uses: actions/download-artifact@v2
-  #       with: 
-  #         name: artifact_generated
-  #     - name: deploy_artifact
-  #       uses: dswistowski/surge-sh-action@v1
-  #       with:
-  #         domain: xema_maestre.surge.sh
-  #         project: .
-  #         login: ${{ secrets.surge_login }}
-  #         token: ${{ secrets.surge_token }}
-
+      - name: Send message
+        uses: ./.github/actions/send_telegram_action
+        with:
+          token_father: ${{ secrets.TELEGRAM_BOT_PRUEBA_TOKEN }}
+          chatId: ${{ secrets.TELEGRAM_ID_CHAT_PRUEBA }}
+          name: "Xema"
